force-app/main/default/objects/Adoption__c/Adoption__c.object-meta.xml
<CustomObject>
    <label>Adoption</label>
    <nameField>
        <label>Adoption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adoptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>