force-app/main/default/objects/Adoption__c/fields/adoption_date__c.field-meta.xml
<CustomField>
    <fullName>adoption_date__c</fullName>
    <label>adoption date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>