force-app/main/default/objects/Adoption__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>N-{0000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>