force-app/main/default/objects/Adoption__c/fields/Pet_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Pet_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pet Pickup</label>
    <type>Checkbox</type>
</CustomField>