force-app/main/default/objects/Adoption__c/fields/Refused__c.field-meta.xml
<CustomField>
    <fullName>Refused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refused</label>
    <type>Checkbox</type>
</CustomField>