force-app/main/default/objects/Adoption__c/validationRules/Date_after_the_month.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_after_the_month</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR(adoption_date__c) &gt; YEAR(TODAY()) || 
(YEAR(adoption_date__c) = YEAR(TODAY()) &amp;&amp; MONTH(adoption_date__c) &gt; MONTH(TODAY()))</errorConditionFormula>
    <errorDisplayField>adoption_date__c</errorDisplayField>
    <errorMessage>The adoption date cannot be later than the current month</errorMessage>
</ValidationRule>