force-app/main/default/objects/Adoption__c/validationRules/Date_before_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_before_today</fullName>
    <active>true</active>
    <errorConditionFormula>adoption_date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>adoption_date__c</errorDisplayField>
    <errorMessage>You cannot create an adoption with a date before today</errorMessage>
</ValidationRule>