force-app/main/default/objects/Adoption__c/validationRules/Do_not_edit_rejected_adoptions.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_edit_rejected_adoptions</fullName>
    <active>true</active>
    <description>Prevent changes to records with &apos;Rejected&apos; status</description>
    <errorConditionFormula>ISCHANGED( State__c ) || NOT(ISNEW())</errorConditionFormula>
    <errorDisplayField>adoption_date__c</errorDisplayField>
    <errorMessage>This adoption process has already been rejected.</errorMessage>
</ValidationRule>