force-app/main/default/objects/Adoption__c/validationRules/Validate_Contact_Age.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Contact_Age</fullName>
    <active>true</active>
    <errorConditionFormula>Contact__r.Age__c  &lt; 18</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>The contact person must be over 18 years of age to constitute an adoption.</errorMessage>
</ValidationRule>